compatible for phone

--- a/src/pages/client.html
+++ b/src/pages/client.html
@@ -15,55 +15,53 @@
     <!-- box displays user info and logout button -->
     <div id="container">
       <div id="user_data">
-        <div id="user_info">
+        <div id="user_info" class="data_item">
           username: <span id="username"></span>
           <br>
           rating: <span id="elo"></span>
         </div>
-        <br>
-        <div id="StatusDisplay">
-          STATUS: <span id="status"></span>
-        </div>
-        <div id="game_control_buttons">
+        <div class="data_item">
           <button id="startBtn" class="gameBtn">Start</button>
           <button id="quitBtn" class="gameBtn">Quit</button>
-        </div>
-        <div>
           <button id="flipBtn" class="gameBtn">Flip Board</button>
         </div>
         <!-- create a table with 2 columns -->
-        <table id="settings">
-          <tr>
-            <td>Premove: </td>
-            <td>
-              <label class="switch">
-                <input type="checkbox" id="preMove" checked>
-                <span class="settingsSlider round"></span>
-              </label>
-            </td>
-          </tr><tr>
-            <td>Auto-Queen: </td>
-            <td>
-              <label class="switch">
-                <input type="checkbox" id="autoQueen" checked>
-                <span class="settingsSlider round"></span>
-              </label>
-          </tr>
-        </table>
+        <div class="data_item">
+          <table id="settings">
+            <tr>
+              <td>Premove: </td>
+              <td>
+                <label class="switch">
+                  <input type="checkbox" id="preMove" checked>
+                  <span class="settingsSlider round"></span>
+                </label>
+              </td>
+            </tr><tr>
+              <td>Auto-Queen: </td>
+              <td>
+                <label class="switch">
+                  <input type="checkbox" id="autoQueen" checked>
+                  <span class="settingsSlider round"></span>
+                </label>
+            </tr>
+          </table>
+        </div>
         <!-- let the user select between online and engine -->
-        <div id="game_mode">
-          <input type="radio" id="engine" name="game_mode" value="engine" checked>
-          <label for="engine">Engine</label>
-          <input type="radio" id="online" name="game_mode" value="online">
-          <label for="online">Online</label>
+        <div class="data_item">
+          <div>
+            <input type="radio" id="engine" name="game_mode" value="engine" checked>
+            <label for="engine">Engine</label>
+            <input type="radio" id="online" name="game_mode" value="online">
+            <label for="online">Online</label>
+          </div>
+          <div id="level_display">
+            Level: 10
+          </div>
+          <div id="engine_level_box">
+            <input type="range" min="0" max="20" value="10" class="slider" id="engine_level">
+          </div>
         </div>
-        <div id="level_display">
-          Level: 10
-        </div>
-        <div id="engine_level_box">
-          <input type="range" min="0" max="20" value="10" class="slider" id="engine_level">
-        </div>
-        <div>
+        <div class="data_item">
           <button id="logoutBtn">Logout</button>
         </div>
       </div>
@@ -80,6 +78,9 @@
       <!-- box displays game controls -->
       <div id="game_controls">
         <!-- copy info to computer clipboard -->
+        <div id="StatusDisplay">
+          STATUS: <span id="status"></span>
+        </div>
         <div id="pgnDisplay" onmouseover='show_copy_btn()' onmouseout='hide_copy_btn()'>
           <button id="pgnBtn">C</button>
           <pre id="pgnText"></pre>
