adjust by percent

--- a/src/pages/client.html
+++ b/src/pages/client.html
@@ -67,13 +67,15 @@
       </div>
       <!-- create board -->
       <div id="game_container">
-        <div id="player2-clock" class="clock">
-          <div id="player2-time"></div>
+        <div id="clocks">
+          <div id="player2-clock" class="clock">
+            <span id="player2-time"></span>
+          </div>
+          <div id="player1-clock" class="clock">
+            <span id="player1-time"></span>
+          </div>
         </div>
         <div id="myBoard"></div>
-        <div id="player1-clock" class="clock">
-          <div id="player1-time"></div>
-        </div>
       </div>
       <!-- box displays game controls -->
       <div id="game_controls">
