--- a/src/pages/shatterd.html
+++ b/src/pages/shatterd.html
@@ -96,7 +96,7 @@
 			prvSeedLen = 0;
 			document.getElementById("seedInput").value = '';
 			document.getElementById("depthInput").value = 25;
-			fetch('http://localhost:5678/items', {
+			fetch('/items', {
 				method: 'POST',
 				headers: {
 					'Content-Type': 'application/json'
