--- a/src/pages/client.html
+++ b/src/pages/client.html
@@ -56,6 +56,7 @@
           </div>
           <div id="clock_opt">
             <!-- let the user choose from a list of clock opt -->
+            <label for="clock_options">Clock: </label>
             <select id="clock_options"></select>
           </div>
           <div id="level_display">
