moved board package

--- a/src/pages/client.html
+++ b/src/pages/client.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="images/chessboardjs-1.0.0/css/chessboard-1.0.0.min.css">
     <link rel="stylesheet" href="styles/client.css">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="images/chessboardjs-1.0.0/js/chessboard-1.0.0.min.js"></script>
+    <script src="board_pack/chessboardjs-1.0.0/js/chessboard-1.0.0.min.js"></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js" integrity="sha384-/KNQL8Nu5gCHLqwqfQjA689Hhoqgi2S84SNUxC3roTe4EhJ9AfLkp8QiQcU8AMzI" crossorigin="anonymous"></script>
     <!-- <script>var exports = {};</script> -->
     <!-- <script src="https://unpkg.com/chess.js@1.0.0-beta.3/dist/chess.js" type="module"></script> -->
