now ctrl+c works always

--- a/src/pages/client.html
+++ b/src/pages/client.html
@@ -3,10 +3,10 @@
   <head>
     <title>Chess</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="images/chessboardjs-1.0.0/css/chessboard-1.0.0.min.css">
+    <link rel="stylesheet" href="packages/chessboardjs-1.0.0/css/chessboard-1.0.0.min.css">
     <link rel="stylesheet" href="styles/client.css">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="board_pack/chessboardjs-1.0.0/js/chessboard-1.0.0.min.js"></script>
+    <script src="packages/chessboardjs-1.0.0/js/chessboard-1.0.0.min.js"></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js" integrity="sha384-/KNQL8Nu5gCHLqwqfQjA689Hhoqgi2S84SNUxC3roTe4EhJ9AfLkp8QiQcU8AMzI" crossorigin="anonymous"></script>
     <!-- <script>var exports = {};</script> -->
     <!-- <script src="https://unpkg.com/chess.js@1.0.0-beta.3/dist/chess.js" type="module"></script> -->
