--- a/src/pages/client.html
+++ b/src/pages/client.html
@@ -11,94 +11,88 @@
     <!-- <script>var exports = {};</script> -->
     <!-- <script src="https://unpkg.com/chess.js@1.0.0-beta.3/dist/chess.js" type="module"></script> -->
   </head>
-  <body onresize='resizeBoard()' class="unselectable">  
+  <body onresize='on_resize()' class="unselectable">  
     <!-- box displays user info and logout button -->
     <div id="container">
-      <div id="user_data">
-        <div id="user_info" class="data_item">
-          username: <span id="username"></span>
-          <br>
-          rating: <span id="elo"></span>
-        </div>
-        <div class="data_item">
-          <button id="startBtn" class="gameBtn">Start</button>
-          <button id="quitBtn" class="gameBtn">Quit</button>
-          <button id="flipBtn" class="gameBtn">Flip Board</button>
-        </div>
-        <!-- create a table with 2 columns -->
-        <div class="data_item">
-          <table id="settings">
-            <tr>
-              <td>Premove: </td>
-              <td>
-                <label class="switch">
-                  <input type="checkbox" id="preMove" checked>
-                  <span class="settingsSlider round"></span>
-                </label>
-              </td>
-            </tr><tr>
-              <td>Auto-Queen: </td>
-              <td>
-                <label class="switch">
-                  <input type="checkbox" id="autoQueen" checked>
-                  <span class="settingsSlider round"></span>
-                </label>
-            </tr>
-          </table>
-        </div>
-        <!-- let the user select between online and engine -->
-        <div class="data_item">
-          <div>
-            <input type="radio" id="engine" name="game_mode" value="engine" checked>
-            <label for="engine">Engine</label>
-            <input type="radio" id="online" name="game_mode" value="online">
-            <label for="online">Online</label>
-          </div>
-          <div id="clock_opt">
-            <!-- let the user choose from a list of clock opt -->
-            <label for="clock_options">Clock: </label>
-            <select id="clock_options"></select>
-          </div>
-          <div id="level_display">
-            Level: 10
-          </div>
-          <div id="engine_level_box">
-            <input type="range" min="0" max="20" value="10" class="slider" id="engine_level">
-          </div>
-        </div>
-        <div class="data_item">
-          <button id="logoutBtn">Logout</button>
-        </div>
-      </div>
       <!-- create board -->
       <div id="game_container">
-        <div id="opponent_info">
-          Opponent: <span id="opponent"></span>
-        </div>
-        <div id="clocks">
-          <div id="player2-clock" class="clock">
-            <span id="player2-time"></span>
-          </div>
+        <div id="player1">
+          <div id="player1-info" class="playerInfo"></div>
           <div id="player1-clock" class="clock">
             <span id="player1-time"></span>
           </div>
         </div>
-        <div id="myBoard"></div>
-      </div>
-      <!-- box displays game controls -->
-      <div id="game_controls">
-        <!-- copy info to computer clipboard -->
-        <div id="StatusDisplay">
-          STATUS: <span id="status"></span>
+        <div class="clearfix"></div>
+        <div id="msg_box">
+          searching for opponent...
         </div>
-        <div id="pgnDisplay" onmouseover='show_copy_btn()' onmouseout='hide_copy_btn()'>
-          <button id="pgnBtn">C</button>
-          <pre id="pgnText"></pre>
+        <div id="myBoard"></div>
+        <div id="player2">
+          <div id="player2-info" class="playerInfo"></div>
+          <div id="player2-clock" class="clock">
+            <span id="player2-time"></span>
+          </div>
+        </div>
+      </div>
+      <div id="con">
+
+        <div id="toggles">
+          <div id="game" onclick="toggleSet('game')" class="toggle">game</div>
+          <div id="new_game" onclick="toggleSet('new_game')" class="toggle">new game</div>
+          <div id="settings" onclick="toggleSet('settings')" class="toggle">settings</div>
+        </div>
+
+        <div id="toggles_content">
+
+          <div id="game_toggle_content" class="toggle_content" style="display: none;">
+            <label for="status">Status:</label>
+            <div id="status"></div>
+            <button id="flipBtn" class="gameBtn">Flip Board</button>
+            <button id="quitBtn" class="gameBtn">Quit</button>
+            <div id="pgnDisplay">PGN:
+              <span id="pgnText"></span>
+            </div>
+          </div>
+
+          <div id="new_game_toggle_content" class="toggle_content">
+              <button id="startBtn" class="gameBtn">Start</button>
+              <div id="game_type">
+                <div id="Online" class="game_type_btn" onclick="game_type('online')" style="background-color: darkslategray;">Online</div>
+                <div id="Engine" class="game_type_btn" onclick="game_type('engine')">Engine</div>
+              </div>
+              <div id="online_display" class="game_type_display">
+                <div id="clocks">
+                  <label for="bullet">Bullet</label>
+                  <div id="bullet" class="clock_type"></div>
+                  <label for="blitz">Blitz</label>
+                  <div id="blitz" class="clock_type"></div>
+                  <label for="rapid">Rapid</label>
+                  <div id="rapid" class="clock_type"></div>
+                </div>
+              </div>
+              <div id="engine_display" class="game_type_display" style="display: none;">
+                <div id="level_display">
+                  Level: 10
+                </div>
+                <br><br>
+                <div id="engine_level_box">
+                  <input type="range" min="0" max="20" value="10" class="slider" id="engine_level">
+                </div>
+              </div>
+          </div>
+            <div id="settings_toggle_content" class="toggle_content" style="display: none;">
+              <table id="settings_t">
+                <tbody></tbody>
+              </table>
+              <button id="logoutBtn" class="gameBtn">Logout</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <script src="scripts/chess.js"></script>
     <script src="scripts/client.js"></script>
     <script src="scripts/handleBoard.js"></script>
+    <script src="scripts/client-clocks.js"></script>
   </body>
 </html>
